--- a/src/App.scss
+++ b/src/App.scss
@@ -219,6 +219,7 @@ padding-left: 20px;
             border: transparent;
             box-shadow: inset 0 0 80px #222;
             height: 130px;
+            padding: 0.5rem;
         }
         .vertical-line{
             position: absolute;
