--- a/src/App.scss
+++ b/src/App.scss
@@ -98,8 +98,10 @@ section.banner{
     top: 20%;
     left: 10%;
     width: 100px;
+    animation: loader13 5s infinite linear;
     }
     .banner-content{
+        animation: content 5s infinite linear;
         position: absolute;
     top: 23%;
     left: 20%;
@@ -156,6 +158,7 @@ section.banner{
         position: absolute;
         bottom: -150px;
         right: 20%;
+        animation: loader13 5s infinite linear;
         img{
             height: 700px;
         }
@@ -165,6 +168,7 @@ section.banner{
         top: 20%;
         right: 10%;
         width: 130px;
+        animation: loader13 5s infinite linear;
     }
     
 }
@@ -189,6 +193,7 @@ section.calculator{
         right: -20%;
         width: 100px;
         margin-bottom: 25px;
+        animation: loader13 5s infinite linear;
     }
     .calculator-wrapper{
         background: url(http://api.thumbr.it/whitenoise-361x370.png?background=333333ff&noise=8a8a8a&density=100&opacity=42);
@@ -245,6 +250,7 @@ padding-left: 20px;
         top: 5%;
         left: -10%;
         width: 130px;
+        animation: loader13 5s infinite linear;
     }
 }
 
@@ -367,3 +373,20 @@ footer.footer{
         text-align: center;
     }
 }
+
+/* loader-13*/
+
+@keyframes loader13 {
+    0%   { transform: translateY(2px) }
+    5%   { transform: translateY(2px) scale(1, 1); }
+    65%  { transform: translateY(10px) scale(0.95);   }
+    100% { transform: translateY(2px) scale(1, 1); }
+}
+
+@keyframes content {
+    0%   { transform: translateX(2px) }
+    5%   { transform: translateX(2px) rotateX(00deg) }
+    65%  { transform: translateX(-10px) rotateZ(1deg)   }
+    100% { transform: translateX(2px) rotateX(00deg) } 
+}
+   
